--- a/MPS.html
+++ b/MPS.html
@@ -1,3 +1,13 @@
+<article>
+<h2></h2>
+</article>  
+  
 <h2>Типичные кейсы</h2>
 
-  <h3>Кейс умника</h3>
+<h3>Кейс умника</h3>
+
+Иллюстрация на тему кейса умника: https://www.youtube.com/watch?v=2Elvv8M7t9A ("Умница Уилл Хантинг") 
+Эпизод из фильма: https://www.youtube.com/watch?v=qEI4OWJtcA0
+<time></time>
+
+<>
